--- a/index.html
+++ b/index.html
@@ -2,10 +2,65 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Meine erste Website</title>
+  <title>Login</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #eee;
+      display: flex;
+      height: 100vh;
+      align-items: center;
+      justify-content: center;
+    }
+    .login-box {
+      background: #222;
+      padding: 20px 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      width: 280px;
+      text-align: center;
+    }
+    input {
+      width: 100%;
+      padding: 8px;
+      margin: 8px 0;
+      border-radius: 6px;
+      border: 1px solid #444;
+      background: #333;
+      color: #eee;
+    }
+    button {
+      padding: 8px 16px;
+      background: #444;
+      color: #eee;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #666;
+    }
+    .message {
+      margin-top: 10px;
+      font-size: 1.2em;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hallo, Welt!</h1>
-  <p>Das ist meine erste Website mit GitHub Pages 🚀</p>
-</body>
-</html>
+  <div class="login-box">
+    <h2>Login</h2>
+    <input id="user" type="text" placeholder="Benutzer">
+    <input id="pass" type="password" placeholder="Passwort">
+    <button onclick="checkLogin()">Login</button>
+    <div class="message" id="msg"></div>
+  </div>
+
+  <script>
+    function checkLogin() {
+      const u = document.getElementById("user").value;
+      const p = document.getElementById("pass").value;
+      const msg = document.getElementById("msg");
+
+      if (u === "4morant00" && p === "mustard67") {
+        msg.te
