--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #111;
-      color: #eee;
+      background: #ffffff; /* weißer Hintergrund */
+      color: #222;
       display: flex;
       height: 100vh;
       align-items: center;
       justify-content: center;
+      margin: 0;
     }
     .login-box {
-      background: #222;
+      background: #f8f8f8;
       padding: 20px 30px;
       border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
       width: 280px;
       text-align: center;
     }
@@ -26,24 +27,24 @@
       padding: 8px;
       margin: 8px 0;
       border-radius: 6px;
-      border: 1px solid #444;
-      background: #333;
-      color: #eee;
+      border: 1px solid #ccc;
+      background: #fff;
+      color: #222;
     }
     button {
       padding: 8px 16px;
-      background: #444;
-      color: #eee;
+      background: #007bff;
+      color: #fff;
       border: none;
       border-radius: 6px;
       cursor: pointer;
     }
     button:hover {
-      background: #666;
+      background: #0056b3;
     }
     .message {
       margin-top: 10px;
-      font-size: 1.2em;
+      font-size: 1.4em;
     }
   </style>
 </head>
@@ -58,9 +59,18 @@
 
   <script>
     function checkLogin() {
-      const u = document.getElementById("user").value;
+      const u = document.getElementById("user").value.trim();
       const p = document.getElementById("pass").value;
       const msg = document.getElementById("msg");
 
       if (u === "4morant00" && p === "mustard67") {
-        msg.te
+        msg.textContent = "🙂";
+        msg.style.color = "green";
+      } else {
+        msg.textContent = "❌ Falsch!";
+        msg.style.color = "red";
+      }
+    }
+  </script>
+</body>
+</html>
