--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       const p = document.getElementById("pass").value;
       const msg = document.getElementById("msg");
 
-      if (u === "4morant00" && p === "mustard67") {
+      if (u === "Mustard" && p === "67") {
         msg.textContent = "🙂";
         msg.style.color = "green";
       } else {
