--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       const msg = document.getElementById("msg");
 
       if (u === "Mustard" && p === "67") {
-        msg.textContent = "🙂";
+        msg.textContent = "ts so tuff boi";
         msg.style.color = "green";
       } else {
         msg.textContent = "❌ Falsch!";
