--- a/index.html
+++ b/index.html
@@ -1,76 +1,48 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #ffffff; /* weißer Hintergrund */
-      color: #222;
-      display: flex;
-      height: 100vh;
-      align-items: center;
-      justify-content: center;
-      margin: 0;
-    }
-    .login-box {
-      background: #f8f8f8;
-      padding: 20px 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      width: 280px;
-      text-align: center;
-    }
-    input {
-      width: 100%;
-      padding: 8px;
-      margin: 8px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      background: #fff;
-      color: #222;
-    }
-    button {
-      padding: 8px 16px;
-      background: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-    .message {
-      margin-top: 10px;
-      font-size: 1.4em;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Notes</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 2rem;
+            background-color: #f4f4f4;
+        }
+        textarea {
+            width: 100%;
+            height: 80vh;
+            padding: 1rem;
+            font-size: 1.1rem;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            resize: none;
+        }
+        button {
+            margin-top: 1rem;
+            padding: 0.7rem 1.5rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>Login</h2>
-    <input id="user" type="text" placeholder="Benutzer">
-    <input id="pass" type="password" placeholder="Passwort">
-    <button onclick="checkLogin()">Login</button>
-    <div class="message" id="msg"></div>
-  </div>
+    <h1>My Notes</h1>
+    <textarea id="notes" placeholder="I dont feel do well, ive been dealing with a lot of things lately. i wanted to have something where i can wrtite stuff down. i dreamt something and it hauntd me.. I was standing on my balcony looking down at the hard floor 10 meters under my feet.it was a foggy day and i couldnt see that good. All of a sudden a strange being crawled onto the balcony from behind, it was like a human but went on all fours and had fur and a long face. it didnt see me. it climbed onto the railing and jumped down. it hit the ground hard and i heard how its bones cracked. it wad a bloody mess, bones sticking out of its back and legs, blood everywhere. it wasnt dead yet. i turned around went to the staircase and saw how it slowly crawled back up despite the agony. it slowly climbed the railing with its last strenght and jumped again. this time it died. im not sure why i dreamed this or what was the moral but it was unsetteling. i sometimes fantasize about how it would feel to crawl out of your own skin and how that would feel, i often think about things like that because i find it interesting. now dont get me wrong im not autistic or anything but i struggle with talking to people, well i dont struggle but im really anxious and nervous, i like being social tho. over time i carry all things on me and dont feel like sharing. im not thinking clearly rn and probaply wont remember. i deserve this, i have done bad things. i guess everyone has done bad things, but some are good at hiding it. ifeel like nothing materess. i wanted to write a book on here but i ended up talking weird stuff. i dont have ideas for a book. and i dont really know what to make it about.  "></textarea>
+    <br>
+    <button onclick="saveNotes()">Save Notes</button>
 
-  <script>
-    function checkLogin() {
-      const u = document.getElementById("user").value.trim();
-      const p = document.getElementById("pass").value;
-      const msg = document.getElementById("msg");
+    <script>
+        const notesField = document.getElementById('notes');
 
-      if (u === "Mustard" && p === "67") {
-        msg.textContent = "ts so tuff boi";
-        msg.style.color = "green";
-      } else {
-        msg.textContent = "❌ Falsch!";
-        msg.style.color = "red";
-      }
-    }
-  </script>
+        // Load saved notes when page opens
+        notesField.value = localStorage.getItem('myNotes') || '';
+
+        function saveNotes() {
+            localStorage.setItem('myNotes', notesField.value);
+            alert('Notes saved!');
+        }
+    </script>
 </body>
 </html>
